--- a/_site.yml
+++ b/_site.yml
@@ -6,6 +6,6 @@ navbar:
       href: index.html
     - text: "Case Study"
       href: CaseStudy.html
-    - text: "Cas Study 2"
+    - text: "Case Study 2"
       href: CaseStudy2.html
       
